--- a/football.html
+++ b/football.html
@@ -21,7 +21,7 @@
     <main>
         <div id="scores-container">
             <section class="scores-section">
-                <h2>Football Scores</h2>
+                <h2>NFL</h2>
             </section>
         </div>
     </main>
