--- a/game-details.html
+++ b/game-details.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uscore - Baseball</title>
+    <title>Game Details - Uscore</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,21 +11,20 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="football.html">Football</a></li>
-                <li><a href="basketball.html">Basketball</a></li>
-                <li><a href="baseball.html">Baseball</a></li>
+                <li><a href="football.html">NFL</a></li>
+                <li><a href="basketball.html">NBA</a></li>
+                <li><a href="baseball.html">MLB</a></li>
             </ul>
         </nav>
     </section>
 
     <main>
-        <div id="scores-container">
-            <section class="scores-section">
-                <h2>MLB</h2>
-            </section>
+        <div id="game-details-container">
+            <h2>Game Details</h2>
+            <div id="game-info"></div>
         </div>
     </main>
 
-    <script src="./scripts.js"></script>
+    <script src="game-details.js"></script>
 </body>
 </html> 
