--- a/basketball.html
+++ b/basketball.html
@@ -21,7 +21,7 @@
     <main>
         <div id="scores-container">
             <section class="scores-section">
-                <h2>Basketball Scores</h2>
+                <h2>NBA</h2>
             </section>
         </div>
     </main>
