--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <section class="header">
-        <h1>Uscore</h1>
+        <h1>U-Score</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,7 +19,7 @@
     </section>
 
     <main>
-        <h2>Welcome to Uscore</h2>
+        <h2>Welcome to U-Score</h2>
         <p>Your real-time source for live sports scores</p>
     </main>
 
