--- a/game-details.html
+++ b/game-details.html
@@ -22,6 +22,22 @@
         <div id="game-details-container">
             <h2>Game Details</h2>
             <div id="game-info"></div>
+            <div class="noise-meter-container">
+                <h3>Stadium Noise Level</h3>
+                <div class="noise-meter">
+                    <div class="noise-gauge">
+                        <div class="noise-level" style="width: 75%"></div>
+                    </div>
+                    <div class="noise-labels">
+                        <span>Quiet</span>
+                        <span>Moderate</span>
+                        <span>Loud</span>
+                        <span>Deafening</span>
+                    </div>
+                    <div class="noise-percentage">75%</div>
+                </div>
+                <p class="noise-description">The crowd is bringing incredible energy to this game!</p>
+            </div>
         </div>
     </main>
 
